--- a/partials/footer.html
+++ b/partials/footer.html
@@ -38,10 +38,10 @@
       <ul class="footer-links">
         <li><a href="/">Home</a></li>
         <li><a href="/about_me">About Me</a></li>
-        <li><a href="/research_publication">Research & Publications</a></li>
-        <li><a href="/programs">Programs</a></li>
-        <li><a href="/media">Media & Advocate</a></li>
         <li><a href="/invited_speaking">Invited Speaking</a></li>
+        <li><a href="/research_publication">Research & Publications</a></li>
+        <li><a href="/programs">Practical & Programs</a></li>
+        <li><a href="/media">Media & Advocate</a></li>
         <li><a href="/connect">Connect</a></li>
       </ul>
     </div>
