--- a/partials/footer.html
+++ b/partials/footer.html
@@ -57,13 +57,21 @@
             >Facebook</a
           >
         </li>
-        <li><a href="mailto:info@drelaineloo.com">Media & enquiries</a></li>
+
         <li>
           <a
-            href="https://www.facebook.com/drelaineloo/posts/pfbid02KJDYsjMFeZctJaPCyWwAw2LyDkdrVkSTrzmysiiDuej9KgTwjfa54TjpD3gSR8zQl"
+            href="https://www.facebook.com/drelaineloo"
             target="_blank"
             rel="noopener"
-            >Latest highlights</a
+            >Instagram</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://www.facebook.com/drelaineloo"
+            target="_blank"
+            rel="noopener"
+            >LinkedIn</a
           >
         </li>
       </ul>
