--- a/partials/footer.html
+++ b/partials/footer.html
@@ -6,7 +6,7 @@
     </div>
     <div class="footer-cta-links">
       <a class="btn btn-primary btn-lg" href="/connect">Plan a collaboration</a>
-      <a class="btn btn-ghost" href="mailto:info@drelaineloo.com"
+      <a class="btn btn-ghost" href="mailto:elaine871207@gmail.com"
         >Email the team</a
       >
     </div>
@@ -22,7 +22,7 @@
       <ul class="footer-contact">
         <li>
           <span class="footer-icon" aria-hidden="true">✉️</span>
-          <a href="mailto:info@drelaineloo.com">info@drelaineloo.com</a>
+          <a href="mailto:elaine871207@gmail.com">elaine871207@gmail.com</a>
         </li>
       </ul>
     </div>
@@ -54,7 +54,7 @@
 
         <li>
           <a
-            href="https://www.facebook.com/drelaineloo"
+            href="https://www.instagram.com/dr.elaineloo"
             target="_blank"
             rel="noopener"
             >Instagram</a
@@ -62,7 +62,7 @@
         </li>
         <li>
           <a
-            href="https://www.facebook.com/drelaineloo"
+            href="https://www.linkedin.com/in/elaine-loo-274136131"
             target="_blank"
             rel="noopener"
             >LinkedIn</a
