--- a/partials/header.html
+++ b/partials/header.html
@@ -4,7 +4,7 @@
     <a class="brand" href="/">
       <img
         class="brand-logo"
-        src="assets/images/logo.png"
+        src="assets/images/logo_yellow.png"
         alt="Dr Elaine Loo"
       />
     </a>
